--- a/src/app/features/trailer-list-view/trailer-list-view.component.html
+++ b/src/app/features/trailer-list-view/trailer-list-view.component.html
@@ -11,16 +11,16 @@
                 <button class="btn btn-success rounded-pill font-14 active me-2">
                 Trailer Info
                 </button>
-                <a routerLink="/document" class="btn btn-success rounded-pill font-14 active me-2">
+                <!-- <a routerLink="/document" class="btn btn-success rounded-pill font-14 active me-2">
                   Document
-                </a>
+                </a> -->
                 <a routerLink="/trailer-list" class="btn btn-outline-secondary rounded-pill font-14">
-                  Back to Truck List
+                  Back to Trailer List
                 </a>
               </div>
               <div>                
                 <div class="btn-group" role="group" aria-label="Basic example">
-                  <a href="javascript:;" class="btn btn-success rounded-pill font-14" type="button" data-bs-toggle="offcanvas" data-bs-target="#editTruck" aria-controls="offcanvasRight"><i class="fa fa-pencil me-1" aria-hidden="true"></i>Edit</a>
+                  <!-- <a href="javascript:;" class="btn btn-success rounded-pill font-14" type="button" data-bs-toggle="offcanvas" data-bs-target="#editTruck" aria-controls="offcanvasRight"><i class="fa fa-pencil me-1" aria-hidden="true"></i>Edit</a> -->
                 </div>
               </div>
             </div>
