--- a/src/app/features/truck-list-view/truck-list-view.component.html
+++ b/src/app/features/truck-list-view/truck-list-view.component.html
@@ -11,18 +11,18 @@
                 <button class="btn btn-success rounded-pill font-14 active me-2">
                 Truck Info
                 </button>
-                <a routerLink="/document" class="btn btn-success rounded-pill font-14 active me-2">
+                <!-- <a routerLink="/document" class="btn btn-success rounded-pill font-14 active me-2">
                   Document
-                </a>
+                </a> -->
                 <a routerLink="/truck-list" class="btn btn-outline-secondary rounded-pill font-14">
                   Back to Truck List
                 </a>
               </div>
               <div>                
                 <div class="btn-group" role="group" aria-label="Basic example">
-                  <a href="javascript:;" class="btn btn-success rounded-pill font-14" type="button" data-bs-toggle="offcanvas" data-bs-target="#editTruck" aria-controls="editTruck">
+                  <!-- <a href="javascript:;" class="btn btn-success rounded-pill font-14" type="button" data-bs-toggle="offcanvas" data-bs-target="#editTruck" aria-controls="editTruck">
                     <i class="fa fa-pencil me-1" aria-hidden="true"></i>Edit
-                  </a>
+                  </a> -->
                   
                   <div class="offcanvas offcanvas-end" tabindex="-1" id="editTruck" aria-labelledby="editTruckLabel">
                     <!-- Offcanvas content -->
