--- a/src/app/features/users-profile/users-profile.component.html
+++ b/src/app/features/users-profile/users-profile.component.html
@@ -12,11 +12,11 @@
     <div class="container-fluid px-5">
       <div class="row">
         <div class="col-xl-12">
-            <div class="my-4">
-              <a routerLink="/company-profile" class="btn btn-outline-secondary rounded-pill font-14">
-                  Back to Dashboard
-                </a>
-            </div>
+          <div class="my-4 ms-3" >
+            <a routerLink="/company-profile" class="btn btn-success rounded-pill font-14 active me-2">
+                Back to Dashboard
+              </a>
+          </div>
         </div>
       </div>
       <div class="row border rounded px-3 py-5">
@@ -157,9 +157,9 @@
                 <a routerLink="/company-profile" class="btn btn-success rounded-pill font-14 active me-2">
                 User Profile
               </a>
-              <a routerLink="/document" class="btn btn-outline-secondary rounded-pill font-14">
+              <!-- <a routerLink="/document" class="btn btn-outline-secondary rounded-pill font-14">
                 Document
-              </a>
+              </a> -->
               </div>
               <div>                
                 <div class="btn-group" role="group" aria-label="Basic example">
@@ -808,10 +808,10 @@
 
               </form>
                 
-                <div class="modal-footer justify-content-center" style="border-top: 1px solid #ccc; padding-top: 15px; margin-top: 15px; ">
-                  <button type="button" class="btn btn-outline-secondary btn-sm text-uppercase rounded-pill" data-bs-dismiss="modal" style="margin: 10px;">Close</button> 
-                  <button type="button" class="btn btn-success btn-sm text-uppercase rounded-pill">Save changes</button>
-                </div>
+              <div class="modal-footer justify-content-center" style="border-top: 1px solid #ccc; padding-top: 15px; margin-top: 15px;">
+                <button type="button" class="btn btn-outline-secondary btn-sm text-uppercase rounded-pill" data-bs-dismiss="offcanvas" style="margin: 10px;">Close</button>
+                <button type="submit" class="btn btn-success btn-sm text-uppercase rounded-pill" data-bs-dismiss="offcanvas">Save changes</button>
+              </div>
             </div>
           </div>
 
