--- a/src/app/features/company-profile/company-profile.component.css
+++ b/src/app/features/company-profile/company-profile.component.css
@@ -1,35 +1,35 @@
 .custom-margin {
-    margin-top: 80px; /* Adjust this value for desired spacing */
+  margin-top: 160px; /* Adjust this value for desired spacing */
 }
 
-  
-  .table {
-    background-color: rgba(255, 255, 255, 0.8); /* White background with transparency */
-    border-radius: 8px; /* Rounded corners */
-    overflow: hidden; /* Prevent overflow if content is larger */
-  }
-  
-  .table th {
-    background-color:whitesmoke; /* Transparent green for header */
-    color: black; /* Text color for header */
-  }
-  
-  .table td {
-    background-color: transparent; /* Transparent background for table cells */
-    color: #333; /* Darker text color for better contrast */
-  }
-  
-  .table-bordered {
-    border: 1px solid rgba(0, 0, 0, 0.2); /* Lighter border color for a softer look */
-  }
-  
-  .table-bordered th,
-  .table-bordered td {
-    border: 1px solid rgba(0, 0, 0, 0.2); /* Lighter border for table cells */
-  }
-  
-  .table th, 
-  .table td {
-    padding: 1rem; /* Add padding for better spacing */
-  }
-  
+.table {
+  background-color: rgba(255, 255, 255, 0.9); /* Slightly less transparent */
+  border-radius: 8px; /* Rounded corners */
+  overflow: hidden; /* Prevent overflow if content is larger */
+  width: 100%; /* Full width */
+}
+
+.table th, .table td {
+  text-align: center; /* Center align text */
+}
+
+.table th {
+  background-color: whitesmoke; /* Background for header */
+  color: black; /* Text color for header */
+  padding: 0.5rem; /* Reduced padding */
+}
+
+.table td {
+  background-color: transparent; /* Transparent background for table cells */
+  color: #333; /* Darker text color for better contrast */
+  padding: 0.5rem; /* Reduced padding */
+}
+
+.table-bordered {
+  border: 1px solid rgba(0, 0, 0, 0.2); /* Lighter border color for a softer look */
+}
+
+.table-bordered th,
+.table-bordered td {
+  border: 1px solid rgba(0, 0, 0, 0.2); /* Lighter border for table cells */
+}
