--- a/src/app/features/trailer-list/trailer-list.component.html
+++ b/src/app/features/trailer-list/trailer-list.component.html
@@ -73,6 +73,7 @@
                         <thead>
                           <tr>
                             <th scope="col">Unit Number</th>
+                            <th scope="col">Company Name</th>
                             <th scope="col">Vin Number</th>
                             <th scope="col">Purchase Date</th>
                             <th scope="col">Monthly Payment</th>
@@ -86,7 +87,8 @@
 
                           <tr *ngFor="let trailer of filteredTrailers">
                             <td><a class="text-primary" [routerLink]="['/trailer-list-view',trailer._id]">{{
-                                trailer.unitNumber }}</a></td>
+                              trailer.unitNumber }}</a></td>
+                              <td>{{findCompanyName(trailer.companyId)}}</td>
                             <td>{{ trailer.vinNumber }}</td>
                             <td>{{ trailer.purchaseDate }}</td>
                             <td>{{ trailer.monthlyPayment }}</td>
@@ -123,7 +125,7 @@
 
                 <div class="row bg-white px-3 py-4 mt-3 rounded">
                   <div class="col-md-12">
-                    <nav aria-label="Page navigation example ms-auto me-auto">
+                    <!-- <nav aria-label="Page navigation example ms-auto me-auto">
                       <ul class="pagination justify-content-center gap-2 mb-0">
                         <li class="page-item">
                           <a class="page-link font-22" href="javascript:;" aria-label="Previous"><i
@@ -137,7 +139,7 @@
                         <li class="page-item"><a class="page-link font-22" href="javascript:;" aria-label="Next"><i
                               class="fa fa-angle-right font-weight-300"></i></a></li>
                       </ul>
-                    </nav>
+                    </nav> -->
                   </div>
                 </div>
               </div>
@@ -217,7 +219,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Documents</h2>
         <input type="file" class="form-control" (change)="trailerEditFile($event, 'uploadDocument')"
-          name="uploadDocuments" required>
+          name="uploadDocuments"  accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
 
       <hr class="hr">
@@ -230,7 +232,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Document</h2>
         <input type="file" class="form-control" (change)="trailerEditFile($event, 'uploadDocument1')"
-          name="uploadDocument" required>
+          name="uploadDocument" accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Renewal Date</h2>
@@ -247,7 +249,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Documents</h2>
         <input type="file" class="form-control" (change)="trailerEditFile($event, 'uploadDocument2')"
-          name="uploadDocuments" required>
+          name="uploadDocuments" accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Loan Bank Name</h2>
@@ -260,7 +262,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Documents</h2>
         <input type="file" class="form-control" (change)="trailerEditFile($event, 'uploadDocument3')"
-          name="uploadDocuments" required>
+          name="uploadDocuments" accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Bank Contact</h2>
@@ -306,9 +308,7 @@
           data-bs-dismiss="offcanvas">Save changes</button>
       </div>
     </form>
-     
   </div>
-    
 </div>
 
 
@@ -398,7 +398,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Documents</h2>
         <input type="file" class="form-control" id="uploadDocument" (change)="onFileChange($event, 'uploadDocument')"
-          name="uploadDocument" required>
+          name="uploadDocument"  accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
 
       <hr class="hr" />
@@ -421,7 +421,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Document</h2>
         <input type="file" class="form-control" id="uploadDocument1" placeholder="Document.pdf"
-          (change)="onFileChange($event, 'uploadDocument1')" name="uploadDocument1" required>
+          (change)="onFileChange($event, 'uploadDocument1')" name="uploadDocument1"  accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
       <!-- Renewal Date -->
       <div class="col-md-4">
@@ -460,7 +460,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Documents</h2>
         <input type="file" class="form-control" id="uploadDocument2" placeholder="Document.pdf"
-          (change)="onFileChange($event, 'uploadDocument2')" name="uploadDocument2" required>
+          (change)="onFileChange($event, 'uploadDocument2')" name="uploadDocument2" accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
 
       <!-- Loan Bank Name -->
@@ -489,7 +489,7 @@
       <div class="col-md-4">
         <h2 class="font-14 font-weight-700">Upload Documents</h2>
         <input type="file" class="form-control" id="uploadDocument3" placeholder="Document.pdf"
-          (change)="onFileChange($event, 'uploadDocument3')" name="uploadDocument3" required>
+          (change)="onFileChange($event, 'uploadDocument3')" name="uploadDocument3" accept=".jpg, .jpeg, .png, .pdf" required>
       </div>
 
       <!-- Bank Contact -->
